# httb

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  RELEASE.md  conan_install.sh  conanfile.py  conanfile.txt  main.cpp
.circleci/: conan_deps.sh  config.yml  deploy.sh  deploy_win.bat  setup.sh  test.sh
cfg/: httb_config.h.in
cmake-modules/: PlatformDetector.cmake
include/httb/: async_session.h  body.h  body_form_urlencoded.h  body_multipart.h  body_serializer.h  body_string.h  client.h  defs.h  helpers.hpp  httb.h  io_container.h  request.h  response.h  timer.h  types.h
include/httb/mocker/: mock_client.h
libs/openssl/darwin_x86_64/include/openssl/: opensslconf.h
libs/openssl/darwin_x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libs/openssl/linux_x86_64/include/openssl/: aes.h  asn1.h  asn1t.h  async.h  bio.h  blowfish.h  bn.h  buffer.h  camellia.h  cast.h  comp.h  conf.h  crypto.h  ct.h  des.h  dh.h  dsa.h  e_os2.h  ec.h  engine.h  err.h  evp.h  hmac.h  idea.h  kdf.h  lhash.h  md4.h  md5.h  mdc2.h  modes.h  objects.h  ocsp.h  opensslv.h  pem.h  pkcs12.h  pkcs7.h  rand.h  rand_drbg.h  rc2.h  rc4.h  (+17 more)
libs/openssl/linux_x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
modules/: ConanInit.cmake  install.cmake
src/: async_session.cpp  async_session.h  body_form_urlencoded.cpp  body_multipart.cpp  body_string.cpp  client.cpp  helpers.hpp  io_container.cpp  request.cpp  response.cpp  timer.cpp  utils.h
tests/: HttpClientNoLocalTest.cpp  HttpClientTest.cpp  main.cpp
tests/mock/: run-server.sh  simple-server.php
